[package]
name = "cfdi"
version = "0.1.2"
edition = "2021"
description = "Crate for using Serde to import, deserialize and use CFDIs (Mexican Electronic Invoices) | Crate para importar CFDIs a Rust, usando Serde."
license = "MIT"
repository = "https://github.com/tonogdlp/cfdi"


[dependencies]
anyhow = { version = "1.0" }
quick-xml = { version = "0.36.1", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
